--- a/raspi_xenomai_defconfig
+++ b/raspi_xenomai_defconfig
@@ -1057,7 +1057,18 @@ BR2_PACKAGE_LIBCOFI=y
 #
 # Real-Time
 #
-# BR2_PACKAGE_XENOMAI is not set
+BR2_PACKAGE_XENOMAI=y
+BR2_PACKAGE_XENOMAI_VERSION=""
+BR2_PACKAGE_XENOMAI_TESTSUITE=y
+# BR2_PACKAGE_XENOMAI_RTCAN is not set
+# BR2_PACKAGE_XENOMAI_ANALOGY is not set
+BR2_PACKAGE_XENOMAI_NATIVE_SKIN=y
+BR2_PACKAGE_XENOMAI_POSIX_SKIN=y
+# BR2_PACKAGE_XENOMAI_VXWORKS_SKIN is not set
+# BR2_PACKAGE_XENOMAI_PSOS_SKIN is not set
+# BR2_PACKAGE_XENOMAI_RTAI_SKIN is not set
+# BR2_PACKAGE_XENOMAI_UITRON_SKIN is not set
+# BR2_PACKAGE_XENOMAI_VRTX_SKIN is not set
 
 #
 # Shell and utilities
@@ -1176,7 +1187,8 @@ BR2_LINUX_KERNEL_ZIMAGE=y
 #
 # Linux Kernel Extensions
 #
-# BR2_LINUX_KERNEL_EXT_XENOMAI is not set
+BR2_LINUX_KERNEL_EXT_XENOMAI=y
+BR2_LINUX_KERNEL_EXT_XENOMAI_ADEOS_PATCH=""
 # BR2_LINUX_KERNEL_EXT_RTAI is not set
 
 #
