A little more optimizations for the raspberrypi hardware

--- a/raspi_xenomai_defconfig
+++ b/raspi_xenomai_defconfig
@@ -163,15 +163,17 @@ BR2_GCC_ENABLE_TLS=y
 # BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
 BR2_USE_WCHAR=y
+BR2_ENABLE_LOCALE=y
 BR2_INSTALL_LIBSTDCPP=y
 BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 # BR2_ENABLE_LOCALE_PURGE is not set
 BR2_GENERATE_LOCALE=""
 BR2_NEEDS_GETTEXT=y
+BR2_NEEDS_GETTEXT_IF_LOCALE=y
 BR2_USE_MMU=y
 BR2_PREFER_SOFT_FLOAT=y
-BR2_SOFT_FLOAT=y
+# BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_TARGET_LDFLAGS=""
 # BR2_ECLIPSE_REGISTER is not set
@@ -183,15 +185,16 @@ BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 # BR2_TOOLCHAIN_BUILDROOT_INET_IPV6 is not set
 # BR2_TOOLCHAIN_BUILDROOT_INET_RPC is not set
 BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
-# BR2_TOOLCHAIN_BUILDROOT_LOCALE is not set
+BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
-# BR2_TOOLCHAIN_BUILDROOT_USE_SSP is not set
+BR2_TOOLCHAIN_BUILDROOT_USE_SSP=y
 # BR2_PTHREADS_NONE is not set
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
 BR2_PTHREADS_NATIVE=y
 # BR2_PTHREAD_DEBUG is not set
 # BR2_ELF2FLT is not set
+BR2_VFP_FLOAT=y
 
 #
 # System configuration
@@ -203,9 +206,9 @@ BR2_TARGET_GENERIC_PASSWD_MD5=y
 # BR2_TARGET_GENERIC_PASSWD_SHA256 is not set
 # BR2_TARGET_GENERIC_PASSWD_SHA512 is not set
 BR2_TARGET_GENERIC_PASSWD_METHOD="md5"
-BR2_ROOTFS_DEVICE_CREATION_STATIC=y
+# BR2_ROOTFS_DEVICE_CREATION_STATIC is not set
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS is not set
-# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV is not set
 BR2_INIT_BUSYBOX=y
 # BR2_INIT_SYSV is not set
@@ -215,7 +218,6 @@ BR2_INIT_BUSYBOX=y
 #
 # BR2_INIT_NONE is not set
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
-BR2_ROOTFS_STATIC_DEVICE_TABLE="system/device_table_dev.txt"
 BR2_ROOTFS_SKELETON_DEFAULT=y
 # BR2_ROOTFS_SKELETON_CUSTOM is not set
 BR2_TARGET_GENERIC_ROOT_PASSWD=""
@@ -358,10 +360,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox-1.21.x.config"
 # BR2_PACKAGE_DIRECTFB is not set
 # BR2_PACKAGE_FBDUMP is not set
 # BR2_PACKAGE_FBGRAB is not set
-
-#
-# fbterm requires a toolchain with C++, WCHAR and locale support
-#
+# BR2_PACKAGE_FBTERM is not set
 # BR2_PACKAGE_FBV is not set
 # BR2_PACKAGE_FB_TEST_APP is not set
 # BR2_PACKAGE_IMAGEMAGICK is not set
@@ -809,10 +808,7 @@ BR2_PACKAGE_LIBCOFI=y
 # BR2_PACKAGE_LIBTASN1 is not set
 # BR2_PACKAGE_LIBTPL is not set
 # BR2_PACKAGE_LIBURCU is not set
-
-#
-# linux-pam requires a toolchain with WCHAR and locale support
-#
+# BR2_PACKAGE_LINUX_PAM is not set
 # BR2_PACKAGE_LOG4CXX is not set
 # BR2_PACKAGE_LTTNG_LIBUST is not set
 # BR2_PACKAGE_MPC is not set
@@ -831,7 +827,6 @@ BR2_PACKAGE_LIBCOFI=y
 # BR2_PACKAGE_ENCHANT is not set
 # BR2_PACKAGE_LIBFRIBIDI is not set
 # BR2_PACKAGE_ICU is not set
-# BR2_PACKAGE_LIBICONV is not set
 # BR2_PACKAGE_LINENOISE is not set
 # BR2_PACKAGE_NCURSES is not set
 # BR2_PACKAGE_NEWT is not set
