--- a/raspi_xenomai_defconfig
+++ b/raspi_xenomai_defconfig
@@ -199,16 +199,16 @@ BR2_VFP_FLOAT=y
 #
 # System configuration
 #
-BR2_TARGET_GENERIC_HOSTNAME="buildroot"
-BR2_TARGET_GENERIC_ISSUE="Welcome to Buildroot"
+BR2_TARGET_GENERIC_HOSTNAME="xenopi"
+BR2_TARGET_GENERIC_ISSUE="Welcome to Xenomai enabled RasperryPI, brought to you by http://idea-on-line.it"
 # BR2_TARGET_GENERIC_PASSWD_DES is not set
 BR2_TARGET_GENERIC_PASSWD_MD5=y
 # BR2_TARGET_GENERIC_PASSWD_SHA256 is not set
 # BR2_TARGET_GENERIC_PASSWD_SHA512 is not set
 BR2_TARGET_GENERIC_PASSWD_METHOD="md5"
-# BR2_ROOTFS_DEVICE_CREATION_STATIC is not set
+BR2_ROOTFS_DEVICE_CREATION_STATIC=y
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS is not set
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
+# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV is not set
 BR2_INIT_BUSYBOX=y
 # BR2_INIT_SYSV is not set
@@ -218,6 +218,7 @@ BR2_INIT_BUSYBOX=y
 #
 # BR2_INIT_NONE is not set
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
+BR2_ROOTFS_STATIC_DEVICE_TABLE="system/device_table_dev.txt"
 BR2_ROOTFS_SKELETON_DEFAULT=y
 # BR2_ROOTFS_SKELETON_CUSTOM is not set
 BR2_TARGET_GENERIC_ROOT_PASSWD=""
@@ -1139,8 +1140,8 @@ BR2_PACKAGE_XENOMAI_POSIX_SKIN=y
 # BR2_TARGET_ROOTFS_ROMFS is not set
 # BR2_TARGET_ROOTFS_SQUASHFS is not set
 BR2_TARGET_ROOTFS_TAR=y
-BR2_TARGET_ROOTFS_TAR_NONE=y
-# BR2_TARGET_ROOTFS_TAR_GZIP is not set
+# BR2_TARGET_ROOTFS_TAR_NONE is not set
+BR2_TARGET_ROOTFS_TAR_GZIP=y
 # BR2_TARGET_ROOTFS_TAR_BZIP2 is not set
 # BR2_TARGET_ROOTFS_TAR_LZMA is not set
 # BR2_TARGET_ROOTFS_TAR_LZO is not set
