Adding dhcp network configuration for eth0

--- a/raspi_xenomai_defconfig
+++ b/raspi_xenomai_defconfig
@@ -232,7 +232,7 @@ BR2_TARGET_GENERIC_GETTY_BAUDRATE_115200=y
 BR2_TARGET_GENERIC_GETTY_BAUDRATE="115200"
 BR2_TARGET_GENERIC_GETTY_TERM="vt100"
 BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW=y
-BR2_ROOTFS_OVERLAY=""
+BR2_ROOTFS_OVERLAY="../rasp_xeno_3.5.7/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT=""
 BR2_ROOTFS_POST_IMAGE_SCRIPT=""
 
